--- a/css/correction2index.css
+++ b/css/correction2index.css
@@ -16,7 +16,7 @@ body{
 
 h1{
     height: 258px;/*personnaliser la hauteur de mon titre*/
-    background: url(../img/apple.jpg) no-repeat left top;
+    background: url(../image/apple.jpg) no-repeat left top;
     margin: 0;
 }
 
@@ -24,7 +24,7 @@ h1 a{
     width: 400px;
     height: 70px;
     display: block;
-    background: url(../img/title.gif) no-repeat;
+    background: url(../image/title.gif) no-repeat;
     position: relative;
     left: 350px;
     top: 15px;
@@ -37,7 +37,7 @@ ul {
 	height: 35px;/*On donne une hauteur au menu, correspondant à la taille de l'image utilisée en fond*/
 	margin: 0;
 	padding: 0;
-	background: url(../img/bg_menu.gif) repeat-x 0 -25px;/*, on met ensuite l'image de fond avec un décalage de 25 pixels vers le haut*/
+	background: url(../image/bg_menu.gif) repeat-x 0 -25px;/*, on met ensuite l'image de fond avec un décalage de 25 pixels vers le haut*/
     list-style-type: none;/*on cache les puces*/
 }
 
@@ -59,7 +59,7 @@ ul li a{
 }
 
 ul li a:hover{/*on décale l'image de fond au passage de la souris pour laisser aparaître l'état survolé de l'image*/
-    background: url(../img/bg_menu.gif) repeat-x 0 0 ;
+    background: url(../image/bg_menu.gif) repeat-x 0 0 ;
 }
 
 footer{
@@ -72,7 +72,7 @@ footer{
 
 main{
     padding: 0 30px 0 100px;
-    background-image: url(../img/bg_page.gif);
+    background-image: url(../image/bg_page.gif);
     background-repeat: no-repeat;
     background-position: 15px 15px;/*crée un espace à gauche et à droite de l'image*/
 }
@@ -81,7 +81,7 @@ main h2{
     padding-left: 25px;/*on décale le texte en fonction de l'image*/
     line-height: 25px;/*on décale le texte en fonction de l'image avec un interligne*/
     font-size: 1.4em;/*on précise une taille de police*/
-    background: url(../img/little_apple.gif) no-repeat left bottom;/* une petite image*/
+    background: url(../image/little_apple.gif) no-repeat left bottom;/* une petite image*/
     color: #9b2;/*couleur au texte*/
     border-bottom: 1px solid #9b2;/*bordure du bas avec couleur*/
 }
